syntax = "proto3";
package productimon.common;
option go_package = "git.yiad.am/productimon/proto/common";

enum EventType {
  UNKNOWN = 0;
  APP_SWITCH_EVENT = 1;
  ACTIVITY_EVENT = 2;
  START_TRACKING_EVENT = 3;
  STOP_TRACKING_EVENT = 4;
}

message StartTrackingEvent {}
message StopTrackingEvent {}

message AppSwitchEvent {
  string app_name = 1;
}

message ActivityEvent {
  // number of keystrokes in sampling duration
  int64 keystrokes = 1;
  // number of mouse clicks in sampling duration
  int64 mouseclicks = 2;
}
